<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Provérbios do Dia</string>
    <string name="banner_ad_unit_TESTE" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit" translatable="false">ca-app-pub-1098336821710456/2508681603</string>
    <string name="btnQuote">Novo Provérbio</string>
    <string name="title_activity_navigation_main2">Provérbio do dia</string>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="Maslow">Abraham Maslow</string>
    <string name="Smith">Adam Smith</string>
    <string name="Eistein">Albert Einstein</string>
    <string name="Kardec">Allan Kardec</string>
    <string name="Aristeles">Aristóteles</string>
    <string name="Marley">Bob Marley</string>
    <string name="Caplin">Charles Chaplin</string>
    <string name="Dickens">Charles Dickens</string>
    <string name="Lispector">Clarice Lispector</string>
    <string name="Confúcio">Confúcio</string>
    <string name="Pessoa">Fernando Pessoa</string>
    <string name="Freud">Sigmund Freud</string>
    <string name="Nietzsche">Friedrich Nietzsche</string>
    <string name="Ford">Henry Ford</string>
    <string name="Marx">Karl Marx</string>
    <string name="Gandhi">Mahatma Gandhi</string>
    <string name="MalcolmX">Malcolm X</string>
    <string name="TzeTung">Mao Tse-tung</string>
    <string name="Aurelio">Marco Aurélio</string>
    <string name="Tatcher">Margareth Thatcher</string>
    <string name="Monroe">Marilyn Monroe</string>
    <string name="Twain">Mark Twain</string>
    <string name="Cervantes">Miguel de Cervantes</string>
    <string name="Mandela">Nelson Mandela</string>
    <string name="Wilde">Oscar Wilde</string>
    <string name="Neruda">Pablo Neruda</string>
    <string name="Coelho">Paulo Coelho</string>
    <string name="Pitagoras">Pitágoras</string>
    <string name="Platao">Platão</string>
    <string name="Exupery">Saint-Exupêry</string>
    <string name="Lama">Dalai Lama</string>
    <string name="Buda">Buda</string>
    <string name="LutherKing">Martin Luther King</string>
    <string name="Vinci">Leonardo da Vinci</string>
    <string name="Dali">Salvador Dalí</string>
    <string name="hauer">Schopenhauer</string>
    <string name="King">Stephen King</string>
    <string name="Jobs">Steve Jobs</string>
    <string name="SunTzu">Sun Tzu</string>
    <string name="Voltaire">Voltaire</string>
    <string name="Shakespeare">William Shakespeare</string>
    <string name="Churchill">Winston Churchill</string>
    <string name="todos">Todos (Aleatório)</string>
    <string name="loading">Aguarde… Carregando…</string>
    <string name="close">Sair</string>
    <string name="no_quote_found" tools:ignore="Typos">Desculpe… Não existem provérbios para esse autor…</string>
    <string name="misc">Misc</string>
    <string name="delete_error">Nao foi possivel excluir o thumbnail.</string>
    <string name="error_share_mkdir">Share Process</string>
    <string name="error_share_mkdir2">Erro ao criar diretorio</string>
    <string name="notification_hint">Que tal ver algumas palavras de sabedoria hoje?</string>
    <string name="a_pill_of_sabedory_in_your_day">Uma pílula de sabedoria em seu dia</string>
    <string name="compartilhar">Compartilhar</string>


</resources>
